--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+openai
+langchain
+langchain-community
+pydantic>=2.0
+faiss-cpu
 streamlit
 pandas
 matplotlib
-langchain
-openai
-langchain-community
-faiss-cpu
